CHANGE HISTORY
--------------------------------

1.10.3 07/03/11

Added  patch from  user  Dan Haller  that sends  UV  and radiation  data to  the
WeatherUnderground if available. Thanks, Dan!

Added  patch from  user Marijn  Vriens that  allows fallback  to the  version of
pysqlite that comes with many versions of Python. Thanks, Marijn!


1.10.2 04/14/11

Added RA and declination for the Sun  and Moon to the Daily Almanac. Equinox and
solstice are now displayed in chronological order. Same with new and full moons.

Examples  alarm.py and  lowBattery.py now  include more  error checks,  allow an
optional 'subject' line  to the sent email, and allow a  comma separated list of
recipients.


1.10.1 03/30/11

Substitutes US Units  if a user does not specify  anything (instead of exception
KeyError).

Almanac uses default temperature and pressure if they are 'None'.

Prettied  up web  page  almanac data  in the  case  where pyephem  has not  been
installed.

Fixed up malformed CSS script weewx.css.


1.10.0 03/29/11

Added extensive almanac  information if the optional package  'pyephem' has been
installed

Added a weewx "favorite icon" favicon.ico that displays in your browser toolbar.

Added  a mobile  formatted HTML  page, courtesy  of user  Vince  Skahan (thanks,
Vince!!).

Tags can now  be ended with a unit  type to convert to a new  unit. For example,
say your pressure group ("group_pressure") has been set to show inHg. The normal
tag   notation  of   "$day.barometer.avg"  will   show  something   like  "30.05
inHg". However, the tag "$day.barometer.avg.mbar" will show "1017.5 mbar".

Added special tag  "exists" to test whether an  observation type exists. Example
"$year.foo.exists"  will  return  False  if  there  is  no  type  "foo"  in  the
statistical database.

Added special tag "has_data" to test  whether an observation type exists and has
a  non-zero number of  data points  over the  aggregation period.   For example,